fix: provide correct z-index for mobile menu
Closes #84

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -91,8 +91,6 @@ header a {
   left: 0;
   height: 100vh;
   width: 100vw;
-
-  z-index: 99;
 }
 
 .cmp-nav__list-item {
